<resources>
    <string name="app_name">STUDYMATERIAL</string>
    <string name="select_year">SELECT YEAR</string>
    <string name="second_year">SECOND YEAR</string>
    <string name="third_year">THIRD YEAR</string>
    <string name="fourth_year">FOURTH YEAR</string>
    <string name="first_year">FIRST YEAR</string>
    <string name="book">book</string>
    <string name="main_template">main template</string>
    <string name="batch_a">Batch A</string>
    <string name="batch_b">Batch B</string>
    <string name="cs_103">CS 103</string>
    <string name="hs_159">HS 159</string>
    <string name="ph_105">PH 105</string>
    <string name="ic_153">IC 153</string>
    <string name="ma_105">MA 105</string>
    <string name="ch_103">CH 103</string>
    <string name="ph_106">PH 106</string>
    <string name="ee_104">EE 104</string>
    <string name="hs_108">HS 108</string>
    <string name="bse_102">BSE 102</string>
    <string name="me_106">ME 106</string>

    <string name="first_semester">First Semester</string>
    <string name="second_semester">Second Semester</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>